# bundle

./: .gitignore  .replit  DEPLOYMENT.md  ads.txt  ai_service.py  app.py  build.sh  create_expanded_decks.py  create_sample_decks.py  deps_temp.txt  fix_xml.py  flashcards_data.json  init_admin.py  init_data.py  init_default_settings.py  migrate_banned.py  migrate_policies.py  models.py  package-lock.json  package.json  pdf_generator.py  pyproject.toml  render.yaml  replit.md  requirements-render.txt  requirements.txt  routes.py  sw.js  test_apk_build.py  utils.py
attached_assets/: Pasted--Downloading-cache-Menu-Cloning-from-https-github-com-j_1775409632252.txt  Pasted--Installing-dependencies-npm-WARN-deprecated-inflight-1-0-6-This-module-is-not-supported-and--1753957338013_1753957338014.txt  Pasted--Search-Live-tail-GMT-1-Menu-Downloading-cache-Cloning-_1764864674741.txt  Pasted--git-push-Enumerating-objects-522-done-Counting-objects_1775415015768.txt  Pasted-Building-TY-LatterGlory-Initiatives-APK-Installing-dependencies-npm-WARN-deprecated-inflig-1753957164960_1753957164961.txt  Pasted-Building-TYLatterGloryInitiatives-Android-App-Installing-dependencies--1753917656713_1753917656714.txt  Pasted-Building-TYLatterGloryInitiatives-for-Google-Play-Store-Installing-dependencies-up-to-date-1753916614706_1753916614707.txt  Pasted-Building-TYLatterGloryInitiatives-for-Google-Play-Store-Installing-dependencies-up-to-date-1753917435477_1753917435479.txt  content-1760812754124.md  (+2 more)
generated_packages/: README.md  SocialMarket_-_Buy_&_Sell_Social_Media_Accounts_1.appx  app_1.apk  (+6 more)
(+171 files in other folders)
