
[tool.poetry]
name = "digitalskeleton-course-platform"
version = "1.0.0"
description = "A Flask-based course management platform with payment integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "3.1.1"
Flask-SQLAlchemy = "3.1.1"
Flask-Login = "0.6.3"
Werkzeug = "3.1.3"
reportlab = "4.2.5"
requests = "2.32.4"
python-dotenv = "1.0.1"
gunicorn = "23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
